--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Collected-Works-of-Henrik-Ibsen-Vol-9-of-11_70684
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 70684-h/images/cover.jpg
 creator:
   author:
     agent_name: Ibsen, Henrik
@@ -19,6 +22,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/3729
     wikipedia: https://en.wikipedia.org/wiki/William_Archer_(critic)
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/70684#The-Collected-Works-of-Henrik-Ibsen-Vol-9-of-11
 gutenberg_issued: '2023-05-01'
 identifiers:
   gutenberg: '70684'
